# Finlytics-AI-Orchestrator

./: .containerignore  .gitignore  CODEOWNERS  Containerfile  Mcp_Server_Run.py  README  README.md  app.py  azure-pipelines.yaml  config.py  pyproject.toml  question.json  requirements-linux-minimal.txt  requirements-linux.txt  requirements-minimal.in  requirements-windows.txt  requirements.in  test.html
